[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "livepeer-gateway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.65.0",
  "protobuf>=4.25.0",
  "aiohttp>=3.9.0",
  "av>=11.0.0",
]

[project.scripts]
generate-lp-rpc = "livepeer_gateway.codegen:main"

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.65.0",
]

examples = [
  "numpy>=2.2.6",
  "opencv-python-headless>=4.13.0.90",
]

[tool.hatch.build.targets.wheel]
packages = ["src/livepeer_gateway", "src/net"]
